intTests/test_llvm_errors/err001.log.good
Loading file "err001.saw"
Verifying foo...
Simulating foo...
Checking proof obligations foo...
Subgoal failed: foo err001.saw:13:1: error: in _SAW_LLVM_withMethodSpec
Literal equality postcondition
Expected term: 
let { x@1 = TCNum 32
      x@2 = seq x@1 Bool
    }
 in ecMul x@2 (PRingSeqBool x@1) x
      (ecNumber (TCNum 3) x@2 (PLiteralSeqBool x@1))
Actual term:
bvMul 32 (bvNat 32 2) x

SolverStats {solverStatsSolvers = fromList ["SBV->Z3"], solverStatsGoalSize = N}
----------Counterexample----------
  x: NNN
----------------------------------
Stack trace:
   (builtin) in z3
   err001.saw:13:38-13:40 in (callback)
   (builtin) in llvm_verify
   err001.saw:13:1-13:40 (at top level)
Proof failed.

FAILED
